fix(top50): hide source canvas, turn off overflow;

--- a/src/index.scss
+++ b/src/index.scss
@@ -15,8 +15,8 @@ $background-color: #242424;
   -moz-osx-font-smoothing: grayscale;
 
   /* uncomment in production so the live canvas isn't visible  */
-  // overflow-x: hidden;
-  // overflow-y: hidden; 
+  overflow-x: hidden;
+  overflow-y: hidden; 
   
 }
 
